[gd_scene load_steps=2 format=3 uid="uid://qtmd6rxqlv1q"]

[ext_resource type="Script" path="res://Scripts/Codriver.gd" id="1_y3wej"]

[node name="Codriver" type="Node3D"]
script = ExtResource("1_y3wej")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CarCondition" type="PanelContainer" parent="CanvasLayer"]
offset_left = 88.0
offset_top = 53.0
offset_right = 232.0
offset_bottom = 226.0

[node name="Timer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -102.0
offset_top = 28.0
offset_right = 102.0
offset_bottom = 108.0
grow_horizontal = 2

[node name="Label" type="Label" parent="CanvasLayer/Timer"]
layout_mode = 2
size_flags_vertical = 1
text = "00 : 00 : 00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Map" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -237.0
offset_top = -195.0
offset_right = 237.0
offset_bottom = 195.0
grow_horizontal = 2
grow_vertical = 2

[node name="PaceNotes" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -294.5
offset_top = -100.0
offset_right = 294.5
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PaceNotes"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PaceNotes/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Left" type="Label" parent="CanvasLayer/PaceNotes/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Left"

[node name="CheckButton_LR" type="CheckButton" parent="CanvasLayer/PaceNotes/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Right" type="Label" parent="CanvasLayer/PaceNotes/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Right"

[node name="VSeparator" type="VSeparator" parent="CanvasLayer/PaceNotes/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Curve" type="MenuButton" parent="CanvasLayer/PaceNotes/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Curves"
item_count = 6
popup/item_0/text = "6"
popup/item_1/text = "5"
popup/item_1/id = 1
popup/item_2/text = "4"
popup/item_2/id = 2
popup/item_3/text = "3"
popup/item_3/id = 3
popup/item_4/text = "2"
popup/item_4/id = 4
popup/item_5/text = "1"
popup/item_5/id = 5

[node name="VSeparator2" type="VSeparator" parent="CanvasLayer/PaceNotes/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Conjunction" type="MenuButton" parent="CanvasLayer/PaceNotes/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Conjunctions"
item_count = 8
popup/item_0/text = "None"
popup/item_1/text = "immediately"
popup/item_1/id = 1
popup/item_2/text = "Into"
popup/item_2/id = 2
popup/item_3/text = "30"
popup/item_3/id = 3
popup/item_4/text = "50"
popup/item_4/id = 4
popup/item_5/text = "100"
popup/item_5/id = 5
popup/item_6/text = "200"
popup/item_6/id = 6
popup/item_7/text = "Long"
popup/item_7/id = 7

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/PaceNotes/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RoadCondition" type="GridContainer" parent="CanvasLayer/PaceNotes/VBoxContainer/HBoxContainer3"]
layout_mode = 2
columns = 3

[node name="Crest" type="Button" parent="CanvasLayer/PaceNotes/VBoxContainer/HBoxContainer3/RoadCondition"]
layout_mode = 2
text = "Crest"

[node name="Bump" type="Button" parent="CanvasLayer/PaceNotes/VBoxContainer/HBoxContainer3/RoadCondition"]
layout_mode = 2
text = "Bump"

[node name="DontCut" type="Button" parent="CanvasLayer/PaceNotes/VBoxContainer/HBoxContainer3/RoadCondition"]
layout_mode = 2
text = "Don't cut"

[node name="Open" type="Button" parent="CanvasLayer/PaceNotes/VBoxContainer/HBoxContainer3/RoadCondition"]
layout_mode = 2
text = "Open"

[node name="Tighten" type="Button" parent="CanvasLayer/PaceNotes/VBoxContainer/HBoxContainer3/RoadCondition"]
layout_mode = 2
text = "Tighten"

[node name="Slippy" type="Button" parent="CanvasLayer/PaceNotes/VBoxContainer/HBoxContainer3/RoadCondition"]
layout_mode = 2
text = "Slippy
"

[node name="VSeparator" type="VSeparator" parent="CanvasLayer/PaceNotes/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Send" type="Button" parent="CanvasLayer/PaceNotes/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Send
"

[connection signal="pressed" from="CanvasLayer/PaceNotes/VBoxContainer/HBoxContainer/CheckButton_LR" to="." method="_on_check_button_LR_pressed"]
[connection signal="pressed" from="CanvasLayer/PaceNotes/VBoxContainer/HBoxContainer3/Send" to="." method="_on_send_pressed"]
